--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,17 @@
 /*  your css code here. If applicable */
+body {
+	background-color: #f8f8f8;
+}
+.book-library {
+	background-color: #ffffff;	
+	color: black;
+}
+.author {
+	 color: #777777;	
+}
+.price {
+	color:#2ecc71;
+	border: 2px solid green;
+	text-align:center;
+	background-color:lightgreen;
+}
