--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,30 @@
-/*  your css code here. If applicable */
-body {
+ody {
 	background-color: #f8f8f8;
 }
+
 .book-library {
 	background-color: #ffffff;	
 	color: black;
 	box-shadow: 10px 10px 5px grey;
 }
-.author {
-	 color: #777777;	
-}
-.price {
-	color:#2ecc71;
-	border: 2px solid green;
-	text-align:center;
-	background-color:rgb(46, 204, 113);
-	border radius: 10px;
-}
 
-
-div {
+.book {
 	width: 50%;
+	color: white; /* Sets the color of text within the book div to white */
 }
+
+.author {
+	color: #777777;	
+}
+
+.price {
+	color: #2ecc71;
+	border: 2px solid green;
+	text-align: center;
+	background-color: lightgreen;
+	border-radius: 10px; /* Adjust as needed */
+}
+
 h1 {
-	text-align:center;
+	text-align: center;
 }
